k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce
  namespace: ecommerce
spec:
  selector:
    app: ecommerce
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
